[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supply-chain-openenv"
version = "1.0.0"
description = "A supply chain management environment for OpenEnv."
authors = [ { name="OpenEnv Submission" } ]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.0",
    "numpy>=2.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
